# EEG-Active-Cognitive-Fatigue-Pipeline

./: .gitignore  CITATION.cff  EXCLUSIONS.md  PARAMETERS.md  Readme.md  pyproject.toml  requirements.txt  temp_paper.txt
.github/workflows/: ci.yml
baseline_pipeline/: README.md
baseline_pipeline/steps/: 01_preprocess.py  02_epoch.py  03_pac_simple.py  04_compare_pipelines.py
docs/: generate_specparam_diagrams.py  implementation_plan_qc_framework.md  justification_hypotheses.md  methodology_pac_zscore.md  postprocessing_analysis.md  preprocessing_pipeline.md
eeg_pipeline/: .gitignore  parameter_gui.py  pipeline_runner_gui.py  run_new_participant.py  run_pipeline.py
eeg_pipeline/analysis/: 10_erp_p3b.py  11_band_power.py  12_peak_frequencies.py  13_pac_nodal.py  14_connectivity.py  15_network_louvain.py  16_merge_features.py  16_regression_model.py  visualise_group.py  visualise_outputs.py
eeg_pipeline/config/: file_naming.json  parameters.json  study.yml
eeg_pipeline/postprocessing/: 08_erp_p3b.py  08_pac_nodal.py  08b_pac_emg_corrected.py  09_alpha_gamma_pac.py  09_band_power.py  09b_alpha_gamma_pac_emg_corrected.py  10_erp_p3b.py  10_pac_nodal.py  10b_pac_emg_corrected.py  11_merge_features.py  11_theta_wpli.py  12_gamma_power.py  12_preprocessing_qc_summary.py  13_emg_pca_covariates.py  13_merge_features.py  14_emg_pac_correlation.py  14_preprocessing_qc_summary.py  15_emg_alpha_gamma_correlation.py  15_theta_stim_specparam.py  16_emg_pca_covariates.py  17_emg_gamma_regression.py  17_emg_pac_correlation.py  17b_emg_pac_correlation.py  18_alpha_gamma_pac.py
(+51 files in other folders)
